# KLauncher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build.yml
resources/: resources.qrc
resources/themes/: dark.qss  deepblue.qss  light.qss  midnight.qss  nord.qss
scripts/: gen_icons.py  klauncher.desktop
src/auth/: MicrosoftAuth.cpp  MicrosoftAuth.h
src/java/: JavaManager.cpp  JavaManager.h
src/minecraft/: GameLauncher.cpp  GameLauncher.h  InstanceManager.cpp  InstanceManager.h  VersionFetcher.cpp  VersionFetcher.h
src/modloaders/: ModLoaderInstaller.cpp  ModLoaderInstaller.h
src/mods/: ModSearch.cpp  ModSearch.h
src/ui/: AccountsPage.cpp  AccountsPage.h  ConsoleWidget.h  InstanceEditDialog.cpp  InstanceEditDialog.h  InstancesPage.cpp  InstancesPage.h  JavaSettingsPage.cpp  JavaSettingsPage.h  MainWindow.cpp  MainWindow.h  ModsPage.cpp  ModsPage.h  SettingsPage.cpp  SettingsPage.h
src/utils/: AppConfig.h  DownloadManager.cpp  DownloadManager.h
